--- a/client/styles.css
+++ b/client/styles.css
@@ -127,12 +127,7 @@ input {
   cursor: pointer;
   outline: none;
 }
-.cat1,
-.cat2,
-.cat3,
-.cat4,
-.cat5,
-.cat6 {
+.categoryBtn {
   align-content:center;
   align-items:center;
   margin-top: 10px;
