--- a/client/styles.css
+++ b/client/styles.css
@@ -68,8 +68,8 @@ h1 {
   font-size: 18px;
   max-height: 300px;
   width: 500px;
-  align-content:center;
-  align-items:center;
+  align-content: center;
+  align-items: center;
   justify-content: center;
   overflow-y: scroll;
 }
@@ -128,8 +128,8 @@ input {
   outline: none;
 }
 .categoryBtn {
-  align-content:center;
-  align-items:center;
+  align-content: center;
+  align-items: center;
   margin-top: 10px;
   float: left;
   border-radius: 5px;
@@ -149,9 +149,9 @@ input {
 
 .cat1:hover {
   background-color: rgb(97, 219, 251);
-  align-content:center;
-  align-items:center;
-    box-shadow: 0px 15px 20px rgba(97, 220, 251, 0.4);
+  align-content: center;
+  align-items: center;
+  box-shadow: 0px 15px 20px rgba(97, 220, 251, 0.4);
   color: #fff;
   transform: translateY(-7px);
 }
@@ -188,6 +188,23 @@ input {
     opacity: 1;
   }
 }
+
+.notification-center {
+  background-color: rgb(209, 162, 162);
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  display: block;
+  border-style: solid;
+  border-color: rgb(97, 219, 251);
+}
+/* visibility: hidden; */
+/* opacity: 0;
+  transition: visibility 0s 2s, opacity 2s linear; */
+
 /* @keyframes bouncy{
    0%{top:0em}
    40%{top:0em}
